<!--
  ~ Copyright 2019 Punch Through Design LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">BLE Starter</string>
    <string name="ble_playground">BLE Playground</string>
    <string name="teste">teste</string>
    <string name="start_scan">Start Scan</string>
    <string name="keep">Keep</string>
    <string name="distance">Distance</string>
    <string name="continuar">CONTINUAR</string>
<<<<<<< HEAD
    <string name="termos_serviço">Ao continuar você concorda com nossos termos de serviço.</string>
    <string name="procurar_sala">Procurar sala</string>
<<<<<<< HEAD
=======
    <string name="termos_servico">Ao continuar você concorda com nossos termos de serviço.</string>
>>>>>>> master
=======
    <string name="home">Home</string>
    <string name="salas">Salas</string>
    <string name="radar">Radar</string>
    <string name="perfil">Perfil</string>
>>>>>>> e590acdb965265a5bdcb74da5e1276f113872164
</resources>
