<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Punch Through Design LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".layouts.ScreenLoginActivity"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textKeep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/crushed_regular"
        android:includeFontPadding="false"
        android:text="@string/keep"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_85ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_30sdp"
        android:fontFamily="@font/crushed_regular"
        android:includeFontPadding="false"
        android:text="@string/distance"
        android:textColor="@color/colorBlueDark"
        android:textSize="@dimen/_55ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textKeep"
        />

    <ImageView
        android:id="@+id/buttonContinue"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/button_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="TODO"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonContinue"
        android:layout_alignEnd="@+id/buttonContinue"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/khula_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/continuar"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="@+id/buttonContinue"
        app:layout_constraintStart_toStartOf="@+id/buttonContinue"
        app:layout_constraintTop_toTopOf="@+id/buttonContinue"
        />

    <TextView
        android:id="@+id/textTermo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_64sdp"
        android:fontFamily="@font/rasa_bold"
        android:includeFontPadding="false"
        android:text="@string/termos_serviço"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>